@@ -463,7 +463,7 @@ Locate "'exists' _ , _".
    \nelist{{\cofixpointbody} \zeroone{\declnotation}}{with} {\tt .} \\
 \\
 {\declnotation} & ::= & 
-  \zeroone{{\tt where} {\str} {\tt :=} {\term} \zeroone{:{\scope}}} .
+  \zeroone{{\tt where} \nelist{{\str} {\tt :=} {\term} \zeroone{:{\scope}}}{\tt and}}.
 \\
 \\
 {\modifiers}
