@@ -1338,7 +1338,7 @@ let do_build_inductive
     ((dummy_loc,relnames.(i)),
     rel_params,
     Some rel_arities.(i),
-    ext_rel_constructors),None
+    ext_rel_constructors),[]
   in
   let ext_rel_constructors = (Array.mapi rel_ind ext_rels_constructors) in
   let rel_inds = Array.to_list ext_rel_constructors in
