@@ -159,7 +159,7 @@ type decl_notation = string * constr_expr * scope_name option
 type simple_binder = lident list  * constr_expr
 type class_binder = lident * constr_expr list
 type 'a with_coercion = coercion_flag * 'a
-type 'a with_notation = 'a * decl_notation option
+type 'a with_notation = 'a * decl_notation list
 type constructor_expr = (lident * constr_expr) with_coercion
 type constructor_list_or_record_decl_expr =
   | Constructors of constructor_expr list
@@ -223,9 +223,9 @@ type vernac_expr =
   | VernacEndProof of proof_end
   | VernacExactProof of constr_expr
   | VernacAssumption of assumption_kind * bool * simple_binder with_coercion list
-  | VernacInductive of inductive_flag * infer_flag * (inductive_expr * decl_notation option) list
-  | VernacFixpoint of (fixpoint_expr * decl_notation option) list * bool
-  | VernacCoFixpoint of (cofixpoint_expr * decl_notation option) list * bool
+  | VernacInductive of inductive_flag * infer_flag * (inductive_expr * decl_notation list) list
+  | VernacFixpoint of (fixpoint_expr * decl_notation list) list * bool
+  | VernacCoFixpoint of (cofixpoint_expr * decl_notation list) list * bool
   | VernacScheme of (lident option * scheme) list
   | VernacCombinedScheme of lident * lident list
 
